--- a/css/main.css
+++ b/css/main.css
@@ -93,14 +93,22 @@
 }
 
 .content__list {
+  position: relative;
   display: flex;
-  gap: 1.6rem;
+  gap: 2rem;
   margin: 2rem 0;
+  /* overflow: scroll; */
+  /* overflow-x: visible; */
 }
 
 .content__item {
   position: relative;
-  width: 100%;
+  /* width: 100rem; */
+  min-width: 30rem;
+}
+
+.content__item:hover {
+  z-index: 11;
 }
 
 .content__item:hover img {
@@ -109,7 +117,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 150%;
+  width: 130%;
   transition: width 0.1s linear;
 }
 
