--- a/react-netflix-clone/src/components/Nav.css
+++ b/react-netflix-clone/src/components/Nav.css
@@ -1,9 +1,9 @@
 .nav {
   position: fixed;
   top: 0;
-  width: 100%;
+  width: 100vw;
   height: 30px;
-  z-index: 1;
+  z-index: 2000;
   padding: 20px;
   display: flex;
   justify-content: space-between;
@@ -17,15 +17,29 @@
 }
 
 .nav__avatar {
-  position: inherit;
+  position: fixed;
   right: 40px;
   width: 4vw;
   object-fit: contain;
 }
 
-.nav__logo {
-  position: inherit;
+.nav__logo-link {
+  position: fixed;
   left: 40px;
+}
+
+.nav__logo {
   width: 10vw;
   object-fit: contain;
+}
+
+.nav__input {
+  position: fixed;
+  left: 50%;
+  transform: translate(-50%, 0);
+  background-color: black;
+  border-radius: 5px;
+  color: white;
+  padding: 5px;
+  border: none;
 }
